--- a/Friends_Series.ipynb
+++ b/Friends_Series.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Friends Series.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMovX3cDc8GYgsqU41LAUo2",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPGrQhc9rBZWXW+n2BksjrW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2034,7 +2035,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**7)How many episodes each director has made? List of top 10 directors.**"
+        " **6) How many episodes each director has made? List of top 10 directors.**"
       ],
       "metadata": {
         "id": "C_5Ij3Vl8Lye"
@@ -2557,17 +2558,6 @@
           "execution_count": 55
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "D7wLki_EzkYh"
-      },
-      "execution_count": 55,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
