--- a/Data_Science_jobs_in_India.ipynb
+++ b/Data_Science_jobs_in_India.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Data_Science_jobs_in India.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNQJT8a3GIyVCScQG0guIFq",
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNNtFtjUZF7LHJlG4tnNnXh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +32,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Data Science Companies**\n",
+        "**Data Science jobs in India**\n",
         "\n",
         "\n",
         "\n",
@@ -1361,6 +1363,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Graphical Representation of Indian Data Science Salaries**"
+      ],
+      "metadata": {
+        "id": "n9yopz2CLbW-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "ax = ds.iloc[0:10,:].plot.bar(x='company_name', y=['avg_salary','min_salary','max_salary'],figsize=(16,10))\n",
@@ -1394,10 +1405,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Graphical Representation of Indian Data Science Salaries**"
+        "\n",
+        "\n",
+        "**Graphical Representation of Indian Data Science Highest Average Salaries**\n",
+        "\n"
       ],
       "metadata": {
-        "id": "n9yopz2CLbW-"
+        "id": "-sMBp_e5NyIU"
       }
     },
     {
